# SwarmMind-Client

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  settings.txt
lib/websocketpp/websocketpp/transport/asio/security/: tls.hpp
shaders/: ParticleRendering.frag  ParticleRendering.vert  Passthrough.vert  Sprite.frag  Sprite.vert  UpdateParticles.frag  commandVisualization.frag  commandVisualization.vert
sound/given_command/: shoot_command_given.flac  walk_command_given.flac
sound/menu_songs/: menu_and_tutorial.flac
sound/monster_die/: dying_scream_1.flac  dying_scream_2.flac  dying_scream_3.flac  dying_scream_4.flac  dying_scream_5.flac
sound/monster_hit/: hit_scream_1.flac  hit_scream_2.flac  hit_scream_3.flac  hit_scream_4.flac  hit_scream_5.flac
sound/next_round/: next_round_1.flac  next_round_2.flac  ticking.flac
sound/unit_attack/: shoot_1.flac  shoot_2.flac  shoot_3.flac
sound/unit_walk/: unit_walking.flac
src/: CMakeLists.txt  main.cpp
src/IMGUI/: CMakeLists.txt
src/IMGUI/opengl3_example/: imgui_impl_glfw_gl3.cpp
src/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  Sprite.cpp  Texture.cpp  Texture.h  TextureRenderData.cpp  TextureRenderData.h
src/events/: AccumulatedCommandsEvent.h  CMakeLists.txt  ChatEvent.h  CommandEvent.h  DisconnectEvent.h  Event.h  EventListener.cpp  EventListener.h  EventSystem.cpp  EventSystem.h  InitStateEvent.h  SoundEvent.h  StateEvent.h
src/game/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Settings.cpp  Settings.h
src/gamestate/: CMakeLists.txt  ChatEntry.h  ChatSystem.cpp  ChatSystem.h  Command.cpp  Command.h  Entity.cpp  Entity.h  GameNetworker.cpp  GameNetworker.h  Gamestate.cpp  Gamestate.h  Map.cpp  Map.h  Networker.cpp  Networker.h  TutorialNetworker.cpp  TutorialNetworker.h
src/imgui/: CMakeLists.txt  gl_imgui_wrapper.h  imconfig.h  imgui.h  imgui_demo.cpp
src/imgui/examples/: imgui_impl_opengl3.cpp
src/imgui/examples/opengl3_example/: imgui_impl_glfw_gl3.cpp
src/imgui/opengl3_example/: imgui_impl_glfw_gl3.cpp
src/input/: CMakeLists.txt  Input.cpp  Input.h
src/internal/: sio_packet.h
src/lodepng/: CMakeLists.txt
src/menu/: CMakeLists.txt  ConnectedState.cpp  ConnectedState.h  MainMenuState.cpp  MainMenuState.h  MenuState.h
src/nlohmann/: CMakeLists.txt  json.hpp
src/renderer/: CMakeLists.txt  CommandVisualizationRenderer.cpp  CommandVisualizationRenderer.h  CommandVisualizer.cpp  CommandVisualizer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  OpenGLHelpers.cpp  OpenGLHelpers.h  OpenGLRenderer.cpp  OpenGLRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.h  Sprite.cpp  Sprite.h  Sprites.cpp  Sprites.h  StaticRenderData.cpp  StaticRenderData.h  Texture.cpp  Texture.h  TextureRenderData.cpp  TextureRenderData.h  Textures.cpp  Textures.h
src/sioclient/: CMakeLists.txt
src/sioclient/src/internal/: sio_client_impl.h
src/sound/: CMakeLists.txt  Sound.cpp  Sound.h  Sounds.cpp  Sounds.h
